--- a/react-app/src/components/AddItemForm/AddItemForm.css
+++ b/react-app/src/components/AddItemForm/AddItemForm.css
@@ -11,6 +11,11 @@
     align-items: center;
     flex-direction: column;
     border: 1px solid black;
-    width: fit-content;
+    width: 400px;
     /* height: 500px; */
+}
+
+.error-container {
+    color: red;
+    height: 150px;
 }
