--- a/react-app/src/components/EditItemForm/EditItemForm.css
+++ b/react-app/src/components/EditItemForm/EditItemForm.css
@@ -1,6 +1,7 @@
 .edit-item-container {
     position: absolute;
     left: 50%;
+    top: 200px;
     border: 1px solid black;
     border-radius: 30px;
     padding: 20px;
@@ -8,9 +9,9 @@
     transition: left 1s;
 }
 
-.edit-item-container:hover {
+/* .edit-item-container:hover {
     box-shadow: 3px 3px 5px black;
-}
+} */
 
 .edit-item-form {
     display: flex;
