--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,24 @@
-/* TODO Add site wide styles */
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.scrollable-x {
+    overflow-x: scroll;
+    /* scrollbar-width: none;
+    -ms-overflow-style: none; */
+}
+
+.scrollable-x::-webkit-scrollbar {
+    height: 14px;
+    border-radius: 10px;
+}
+
+.scrollable-x::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+.scrollable-x::-webkit-scrollbar-thumb {
+    border: 1px solid rgb(158, 158, 158);
+    background-color: rgb(0, 0, 0, 0.7);
+    border-radius: 20px;
+}
