--- a/react-app/src/components/EditItemForm/EditItemForm.css
+++ b/react-app/src/components/EditItemForm/EditItemForm.css
@@ -1,17 +1,11 @@
 .edit-item-container {
-    position: absolute;
-    left: 50%;
-    top: 200px;
-    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
     border-radius: 30px;
-    padding: 20px;
+    padding: 5px 100px 40px 100px;
     background-color: white;
     transition: left 1s;
 }
-
-/* .edit-item-container:hover {
-    box-shadow: 3px 3px 5px black;
-} */
 
 .edit-item-form {
     display: flex;
@@ -27,7 +21,23 @@
     flex-direction: column;
 }
 
+.edit-img-tag {
+    align-self: center;
+}
+
 .error-container {
     color: red;
     height: 150px;
+}
+
+.submit-button {
+    margin-bottom: 10px;
+    background-color: black;
+    color: white;
+    padding: 10px 42px;
+}
+
+.cancel-button {
+    background-color: white;
+    border: none;
 }
