--- a/react-app/src/components/Teams/Teams.css
+++ b/react-app/src/components/Teams/Teams.css
@@ -1,17 +1,26 @@
 .team-gallery {
     display: flex;
     /* padding: 30px 0; */
+    justify-content: center;
 }
 
 .badge-gallery {
     display: flex;
+    gap: 10px;
+}
+
+.team-card {
+    /* border-radius: 50%;
+    background-color: rgb(163, 162, 162); */
+    border-radius: 50%;
+    /* transition: background-color .5s; */
 }
 
 .team-card:hover {
     border-radius: 50%;
-    background-color: rgb(163, 162, 162);
+    background-color: rgb(194, 194, 194);
 }
 
 .team-img {
-    width: 140px;
+    width: 70px;
 }
