--- a/react-app/src/components/AddItemForm/AddItemForm.css
+++ b/react-app/src/components/AddItemForm/AddItemForm.css
@@ -3,19 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px 100px 100px 100px;
 }
 
 .add-item-inputs {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 1px solid black;
-    width: 400px;
+    align-items: center; */
+    /* flex-direction: column; */
     /* height: 500px; */
 }
 
 .error-container {
     color: red;
-    height: 150px;
+    height: 160px;
+    max-width: 200px;
 }
