--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -3,6 +3,27 @@
     margin: auto 0;
 }
 
+.item-card {
+    display: flex;
+    flex-direction: column;
+    /* align-items: space-between; */
+    justify-content: space-between;
+    /* width: 280px; */
+    max-width: 240px;
+    min-height: 280px;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 20px;
+    transition: box-shadow .5s ease-in;
+}
+
+.item-card:hover {
+    /* border: 1px solid black; */
+    box-shadow: 1px 1px 6px rgb(194, 194, 194);
+    /* counter balance 1px border shift */
+    /* padding: 9px; */
+}
+
 .type-header {
     font-size: 32px;
     align-self: center;
@@ -35,25 +56,6 @@
     gap: 20px;
 }
 
-.item-card {
-    display: flex;
-    flex-direction: column;
-    /* align-items: space-between; */
-    justify-content: space-between;
-    width: 340px;
-    min-height: 300px;
-    margin: 10px auto;
-    padding: 10px;
-    border-radius: 20px;
-    transition: box-shadow .5s ease-in;
-}
-
-.item-card:hover {
-    /* border: 1px solid black; */
-    box-shadow: 1px 1px 6px rgb(194, 194, 194);
-    /* counter balance 1px border shift */
-    /* padding: 9px; */
-}
 
 .item-card-info {
     display: flex;
