--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -9,7 +9,14 @@
 
 .nav-ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  position: fixed;
+  width: 100%;
+  padding: 10px 0;
+  margin: 0 auto;
+  top: 0;
+  z-index: 1;
+  background-color: white;
 }
 
 .nav-right-side {
