--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -23,6 +23,27 @@
     border-radius: 20px;
 }
 
+.scrollable-y {
+    overflow-y: scroll;
+    /* scrollbar-width: none;
+    -ms-overflow-style: none; */
+}
+
+.scrollable-y::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 10px;
+}
+
+.scrollable-y::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+.scrollable-y::-webkit-scrollbar-thumb {
+    border: 1px solid rgb(158, 158, 158);
+    background-color: rgb(0, 0, 0, 0.7);
+    border-radius: 20px;
+}
+
 .text-cushion {
     height: 20px;
 }
