--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -3,25 +3,44 @@
     margin: auto 0;
 }
 
+.item-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .item-card {
     display: flex;
     flex-direction: column;
-    /* align-items: space-between; */
     justify-content: space-between;
-    /* width: 280px; */
     max-width: 240px;
     min-height: 280px;
-    margin: 10px auto;
-    padding: 10px;
+    margin: 6px 4px;
+    padding: 0 10px 20px 10px;
     border-radius: 20px;
     transition: box-shadow .5s ease-in;
 }
 
 .item-card:hover {
-    /* border: 1px solid black; */
-    box-shadow: 1px 1px 6px rgb(194, 194, 194);
-    /* counter balance 1px border shift */
-    /* padding: 9px; */
+    box-shadow: 3px 3px 6px 6px rgb(194, 194, 194);
+}
+
+.inner-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 240px;
+    min-height: 280px;
+    margin: 6px 4px;
+    padding: 0 10px 20px 10px;
+    box-shadow: none;
+    border-radius: 0px;
+    border-bottom: 1px solid rgb(197, 197, 197);
+}
+
+.inner-card:hover {
+    box-shadow: none;
 }
 
 .type-header {
@@ -56,11 +75,20 @@
     gap: 20px;
 }
 
-
 .item-card-info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-self: flex-end; */
-    /* max-height: 60px; */
+    /* border: 1px solid black; */
+}
+
+.card-badge {
+    position: relative;
+    top: 60px;
+    left: 160px;
+    width: 80px;
+}
+
+.manage {
+    width: 100%;
 }
