--- a/react-app/src/components/SlideOutCart/SlideOutCart.css
+++ b/react-app/src/components/SlideOutCart/SlideOutCart.css
@@ -3,23 +3,21 @@
     flex-direction: column;
     position: fixed;
     top: 50px;
-    right: -10px;
+    right: 0px;
     padding: 20px 30px;
-    width: 320px;
+    width: 520px;
     height: 90%;
     transition: right 1s;
     text-decoration: none;
     list-style: none;
-    margin-right: 10px;
-    background-color: whitesmoke;
+    background-color: rgb(247, 247, 247);
     border-top: rgb(77, 76, 76) 1px solid;
-    margin-left: -20px;
     scrollbar-width: none;
     -ms-overflow-style: none;
   }
 
   .hidden-cart {
-    right: -400px;
+    right: -600px;
   }
 
   #cart {
