--- a/react-app/src/components/Cart/Cart.css
+++ b/react-app/src/components/Cart/Cart.css
@@ -12,19 +12,19 @@
     flex-direction: column;
     justify-content: center; */
     width: 100%;
-    max-height: 75%;
+    height: 100%;
     padding: 0 16px;
-    overflow: hidden;
+    overflow-x: hidden;
     /* border: 1px solid red; */
 }
 
 .cart-item-info {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 10px 10px;
     margin: 10px 10px 0 0;
     width: 100%;
+    height: 40px;
 }
 
 .cart-item-info:hover {
@@ -71,12 +71,20 @@
 .subtotal {
     font-size: 24px;
     font-weight: bold;
+    padding-top: 40px;
+    border-top: 1px solid rgb(219, 219, 219);
+}
+
+.subtotal-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .checkout-section {
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
+    padding-top: 60px;
 }
 
 .checkout-button {
