fix layout for filter and teams

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,6 +2,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
+#root {
+    overflow-x: hidden;
+}
+
 .scrollable-x {
     overflow-x: scroll;
     /* scrollbar-width: none;
