--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    width: 70%;
+    max-width: 100%;
+    /* max-width: 1000px; */
+    border: 1px solid black;
 }
 
 .card-img {
@@ -21,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 240px;
+    max-width: 260px;
     min-height: 280px;
     margin: 6px 4px;
     padding: 0 10px 20px 10px;
