--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -4,7 +4,7 @@
     align-items: flex-end;
     max-width: 100%;
     /* max-width: 1000px; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .card-img {
