--- a/react-app/src/components/SlideOutMenu/SlideOutMenu.css
+++ b/react-app/src/components/SlideOutMenu/SlideOutMenu.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 60px;
+    top: 54px;
     left: -1px;
     padding-top: 5px;
     padding-bottom: 10px;
@@ -14,7 +14,7 @@
     list-style: none;
     margin-right: 10px;
     background-color: rgb(245, 245, 245);
-    border-top: rgb(77, 76, 76) 1px solid;
+    /* border-top: rgb(77, 76, 76) 1px solid; */
     margin-left: -20px;
     scrollbar-width: none;
     -ms-overflow-style: none;
