--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -38,7 +38,7 @@
 }
 
 .item-card:hover {
-    box-shadow: 3px 3px 6px 6px rgb(194, 194, 194);
+    box-shadow: 3px 3px 6px 2px rgba(194, 194, 194, 0.692);
 }
 
 .inner-card {
