--- a/react-app/src/components/SlideOutMenu/SlideOutMenu.css
+++ b/react-app/src/components/SlideOutMenu/SlideOutMenu.css
@@ -33,3 +33,62 @@
     /* color: blue; */
     font-size: 24px;
   }
+
+  .sidebar-modal {
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(243, 243, 243);
+  }
+
+  .sidebar-modal:hover {
+    border: none;
+    background-color: none;
+    background-color: rgb(231, 231, 231);
+  }
+
+  .slide-out-menu > div {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .slide-out-menu > div:hover {
+    background-color: rgb(231, 231, 231);
+  }
+
+  .slide-out-menu > a {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+  }
+
+  .slide-out-menu > a:hover {
+    background-color: rgb(231, 231, 231);
+  }
+
+  .slide-out-menu > button {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    border: none;
+  }
+
+  .slide-out-menu > button:hover {
+    background-color: rgb(231, 231, 231);
+  }
+
+  .slide-out-menu > p {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .slide-out-menu > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+  }
