--- a/react-app/src/components/ItemDetails/ItemDetails.css
+++ b/react-app/src/components/ItemDetails/ItemDetails.css
@@ -6,7 +6,7 @@
 }
 
 .item-details-page {
-    margin: 0 auto;
+    margin: 80px auto;
     max-width: 1000px;
     /* border: 1px solid black; */
 }
