--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -14,3 +14,9 @@ justify-content: center;
 .items-app {
     width: 75%;
 }
+
+@media screen and (max-width: 700px) {
+    .filter-app {
+        display: none;
+    }
+}
