--- a/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
+++ b/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
@@ -1,23 +1,25 @@
 .items-header-container {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-around; */
     margin: 80px 0 20px 0;
+
 }
 
 .items-header {
     display: flex;
     /* border: 1px solid black; */
     border-radius: 24px;
-    width: 30%;
+    width: 90%;
     /* padding: 5px; */
+    margin: 0 auto;
     height: 240px;
     background-color: rgba(255, 175, 26, 0.952);
 }
 
 .items-header-image {
     border-radius: 0 24px 24px 0;
-    width: 240px;
+    min-width: 300px;
     height: 100%;
 }
 
