--- a/react-app/src/components/UsersItems.js/UsersItems.css
+++ b/react-app/src/components/UsersItems.js/UsersItems.css
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     margin-top: 100px;
     height: 88vh;
-    background-size: 22%;
+    background-size: 100%;
 }
 
 .card-badge {
@@ -32,5 +32,8 @@
 @media screen and (max-width: 750px) {
     .gallery-container-user {
         background-size: 42%;
+    }
+    .item-card-user {
+        margin-left: 130px;
     }
 }
