--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 100px;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .item-gallery {
@@ -32,13 +32,15 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 260px;
-    min-height: 280px;
+    min-height: 400px;
+    max-height: 440px;
     margin: 6px 4px;
     padding: 0 10px 20px 10px;
     border-radius: 20px;
     background-color: white;
     transition: box-shadow .5s ease-in;
-    height: 700px;
+    /* height: 700px; */
+    overflow-y: hidden;
 }
 
 .item-card:hover {
@@ -72,20 +74,23 @@
 .cleats-gallery {
     display: flex;
     width: 100%;
-    height: 800px;
+    /* height: 800px; */
     gap: 20px;
+    overflow-y: hidden;
 }
 
 .ball-gallery {
     display: flex;
     width: 100%;
     gap: 20px;
+    overflow-y: hidden;
 }
 
 .socks-gallery {
     display: flex;
     width: 100%;
     gap: 20px;
+    overflow-y: hidden;
 }
 
 .item-card-info {
@@ -107,7 +112,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .item-card {
+    /* .item-card {
         margin-left: 80px;
-    }
+    } */
 }
