--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -1,7 +1,7 @@
 .gallery-container {
     display: flex;
     justify-content: flex-end;
-    margin-top: 100px;
+    margin-top: 0px;
     /* height: 100%; */
 }
 
@@ -65,8 +65,8 @@
 }
 
 .type-header {
-    font-size: 32px;
-    align-self: center;
+    font-size: 28px;
+    align-self: flex-start;
     border-bottom: 1px solid rgb(206, 206, 206);
 }
 
