--- a/react-app/src/components/SlideOutCart/SlideOutCart.css
+++ b/react-app/src/components/SlideOutCart/SlideOutCart.css
@@ -23,3 +23,10 @@
   #cart {
     font-size: 24px;
   }
+
+  @media screen and (max-width: 500px) {
+    .slide-out-cart {
+      width: 200px;
+    }
+
+}
