--- a/react-app/src/components/SlideOutMenu/SlideOutMenu.css
+++ b/react-app/src/components/SlideOutMenu/SlideOutMenu.css
@@ -125,3 +125,10 @@
     width: 100%;
     height: 100px;
   }
+
+  @media screen and (max-width: 500px) {
+    .slide-out-menu {
+      width: 200px;
+    }
+
+}
