--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -68,3 +68,22 @@ label {
     display: flex;
     flex-direction: column;
 }
+
+.alice-carousel__next-btn-item.__inactive {
+color: pink;
+}
+.alice-carousel__prev-btn-item.__inactive {
+color: green;
+}
+
+.alice-carousel__play-btn-item.__pause {
+    color: blanchedalmond
+}
+
+.alice-carousel__dots-item.__active {
+    color: yellow;
+}
+.alice-carousel__dots-item.__custom {
+
+    color: yellow;
+}
