--- a/react-app/src/components/SlideOutMenu/SlideOutMenu.css
+++ b/react-app/src/components/SlideOutMenu/SlideOutMenu.css
@@ -41,6 +41,8 @@
   #bars {
     /* color: blue; */
     font-size: 24px;
+    padding: 18px 26px;
+    border: 1px solid black;
   }
 
   .sidebar-modal {
