--- a/react-app/src/components/UsersItems.js/UsersItems.css
+++ b/react-app/src/components/UsersItems.js/UsersItems.css
@@ -17,7 +17,7 @@
     width: 80px;
 }
 
-@media screen and (max-width: 1270px) {
+/* @media screen and (max-width: 1270px) {
     .gallery-container-user {
         background-size: 30%;
     }
@@ -33,7 +33,7 @@
     .gallery-container-user {
         background-size: 42%;
     }
-}
+} */
 
 @media screen and (max-width: 500px) {
     .item-card-user {
