add filter section functionality

--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -32,8 +32,8 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 260px;
-    min-height: 400px;
-    max-height: 440px;
+    /* min-height: 400px; */
+    height: 500px;
     margin: 6px 4px;
     padding: 0 10px 20px 10px;
     border-radius: 20px;
@@ -65,7 +65,8 @@
 }
 
 .type-header {
-    font-size: 28px;
+    font-size: 36px;
+    margin-left: 40px;
     align-self: flex-start;
     border-bottom: 1px solid rgb(206, 206, 206);
 }
@@ -109,6 +110,18 @@
 
 .manage {
     width: 100%;
+}
+
+.no-filter-found {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* border: 1px solid black; */
+    width: 80%;
+    margin: 0 auto;
+    height: 524px;
+    font-size: 60px;
 }
 
 @media screen and (max-width: 700px) {
