--- a/react-app/src/components/Filter/Filter.css
+++ b/react-app/src/components/Filter/Filter.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
+    /* min-width: 300px; */
 }
 
 .filter-container > div {
@@ -9,7 +10,28 @@
 }
 
 .type-filter {
-    font-size: 20px;
+    display: flex;
+    gap: 10px;
+    font-size: 18px;
+}
+
+.type-filter > li {
+    width: fit-content;
+    padding: 10px 20px;
+    margin: 4px 0;
+    border-radius: 20px;
+    background-color: rgb(226, 226, 226);
+}
+
+.type-tag {
+    font-size: 28px;
+}
+
+.price-tag {
+    font-size: 28px;
+}
+.team-tag {
+    font-size: 28px;
 }
 
 .filter-teams {
@@ -19,11 +41,11 @@
 .filter-middle {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 5px;
 }
 
 .filter-middle > div {
-    padding: 4px 12px;
-    border-radius: 30px;
+    padding: 10px 20px;
+    border-radius: 20px;
     background-color: rgb(225, 225, 225);
 }
