--- a/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
+++ b/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
@@ -8,9 +8,10 @@
 
 .items-header {
     display: flex;
+    width: 65%;
+    /* min-width: 70%; */
     /* border: 1px solid black; */
     border-radius: 24px;
-    width: 90%;
     /* padding: 5px; */
     margin: 0 auto;
     height: 240px;
@@ -19,11 +20,13 @@
 
 .items-header-image {
     border-radius: 0 24px 24px 0;
-    min-width: 300px;
+    min-width: 290px;
     height: 100%;
 }
 
 .text-container {
+    /* min-width: 100px;
+    max-width: 200px; */
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -58,14 +61,38 @@
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1400px) {
+    .items-header {
+        max-height: 200px;
+        max-width: 600px;
+        justify-content: center;
+    }
     .items-header-image {
         border-radius: 0 24px 24px 0;
-        min-width: 180px;
+        min-width: 140px;
+        /* max-width: 200px; */
         height: 100%;
     }
     .text-container {
+        min-width: 180px;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .items-header {
+        max-height: 200px;
+        max-width: 300px;
+        justify-content: center;
+    }
+    .items-header-image {
+        border-radius: 0 24px 24px 0;
         min-width: 140px;
+        height: 100%;
+    }
+    .text-container {
+        min-width: 110px;
+        padding: 0 10px 0 70px;
     }
 
 }
