--- a/react-app/src/components/UsersItems.js/carousel-style.css
+++ b/react-app/src/components/UsersItems.js/carousel-style.css
@@ -4,14 +4,14 @@
     /* width: 40px; */
     /* background-color:yellow;
     font-size: 20px; */
-    padding-top: 20px;
+    padding-top: 10px;
     /* padding-bottom: 50px; */
     /* display: flex;
     justify-content: center; */
     /* width: 80px; */
     margin: 0 auto;
     height: 30px;
-    background-color: rgba(255, 255, 255, 0.79);
+    background-color: rgba(255, 255, 255, 0.45);
     border-radius: 20px 20px 0 0;
 }
 
@@ -30,11 +30,12 @@
     /* width: 80px; */
     /* margin-left: 47%; */
     height: 30px;
-    background-color: rgba(255, 255, 255, 0.79);
-    padding: 40px 10px;
+    background-color: rgba(255, 255, 255, 0.45);
+    padding: 20px 10px;
     /* border: 1px solid black; */
     /* width: 40px; */
     align-self: center;
+    border-radius: 0 0 0 20px;
 }
 
 .alice-carousel__next-btn {
@@ -43,8 +44,9 @@
     margin: 0 auto;
     height: 30px;
     color: blue;
-    background-color: rgba(255, 255, 255, 0.757);
-    padding: 40px 10px;
+    background-color: rgba(255, 255, 255, 0.45);
+    padding:20px 10px;
+    border-radius: 0 0 20px 0;
     /* border: 1px solid black; */
     /* width: 40px; */
 }
