--- a/react-app/src/components/SlideOutCart/SlideOutCart.css
+++ b/react-app/src/components/SlideOutCart/SlideOutCart.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 50px;
+    top: 60px;
     right: 0px;
     padding: 20px 30px;
     width: 400px;
@@ -24,9 +24,22 @@
     font-size: 24px;
   }
 
-  @media screen and (max-width: 700px) {
+
+
+  @media screen and (max-width: 1300px) {
+    .slide-out-cart {
+      width: 300px;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
     .slide-out-cart {
       width: 200px;
     }
+  }
 
+  @media screen and (max-width: 700px) {
+    .slide-out-cart {
+      width: 180px;
+    }
 }
