fix carousel slide position bug. add error handling and validations

--- a/react-app/src/components/DeleteModal/DeleteModal.css
+++ b/react-app/src/components/DeleteModal/DeleteModal.css
@@ -25,3 +25,9 @@
     background-color: rgb(226, 226, 226);
     padding: 10px 42px;
 }
+
+.countdown {
+    padding: 4px 110px;
+    font-size: 78px;
+    font-weight: bold;
+}
