--- a/react-app/src/components/AddItemForm/AddItemForm.css
+++ b/react-app/src/components/AddItemForm/AddItemForm.css
@@ -3,7 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px 100px 100px 100px;
+    padding: 10px 100px 0px 100px;
+}
+.form-modal-container {
+    padding-bottom: 100px;
 }
 
 .add-item-inputs {
