--- a/react-app/src/components/Filter/Filter.css
+++ b/react-app/src/components/Filter/Filter.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 10px;
     /* min-width: 300px; */
+    margin: 10px 70px;
 }
 
 .filter-container > div {
@@ -19,11 +20,12 @@
 .type-filter {
     display: flex;
     justify-content: center;
-    gap: 5px;
     font-weight: bold;
+    gap: 5px;
     font-size: 14px;
     width: 100%;
     /* border: 1px solid black; */
+    margin-right: 40px;
 }
 
 .type-filter > li {
@@ -33,7 +35,6 @@
     text-align: center;
     width: 100px;
     padding: 2px 2px;
-    margin-right: 20px;
     border-radius: 20px;
     background-color: rgb(226, 226, 226);
 }
@@ -69,4 +70,20 @@
     padding: 10px 0;
     border-radius: 20px;
     background-color: rgb(225, 225, 225);
+}
+
+.filter-bottom {
+    display: flex;
+    /* justify-content: center; */
+    /* border: 1px solid red; */
+}
+
+.team-select-field {
+    height: 40px;
+    box-shadow: 2px 2px 2px grey;
+    border: 1px solid grey;
+    outline: none;
+    font-size: 18px;
+    font-weight: bold;
+    /* margin: 0 20px; */
 }
