--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -31,8 +31,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 260px;
-    /* min-height: 400px; */
+    min-width: 200px;
+    /* max-width: 280px; */
+    min-height: 400px;
     height: 500px;
     margin: 6px 4px;
     padding: 0 10px 20px 10px;
@@ -51,7 +52,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 240px;
+    max-width: 200px;
     min-height: 280px;
     margin: 6px 4px;
     padding: 0 10px 20px 10px;
