--- a/react-app/src/components/UsersItems.js/carousel-style.css
+++ b/react-app/src/components/UsersItems.js/carousel-style.css
@@ -1,17 +1,8 @@
-/* Custom styling for the dots */
 .alice-carousel__dots {
-    /* Add your styles here */
-    /* width: 40px; */
-    /* background-color:yellow;
-    font-size: 20px; */
     padding-top: 10px;
-    /* padding-bottom: 50px; */
-    /* display: flex;
-    justify-content: center; */
-    /* width: 80px; */
     margin: 0 auto;
     height: 30px;
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(255, 255, 255, .65);
     border-radius: 20px 20px 0 0;
 }
 
@@ -20,38 +11,23 @@
     margin: 0 auto;
 }
 
-/* Custom styling for the buttons */
 .alice-carousel__prev-btn {
-    /* display: flex;
-    justify-content: center;
-    width: 80px;
-    margin: 0 auto;
-    background-color: white; */
-    /* width: 80px; */
-    /* margin-left: 47%; */
     height: 30px;
-    background-color: rgba(255, 255, 255, 0.45);
-    padding: 20px 10px;
-    /* border: 1px solid black; */
-    /* width: 40px; */
+    background-color: rgba(255, 255, 255, .65);
+    padding:0 10px 30px 10px;
     align-self: center;
     border-radius: 0 0 0 20px;
 }
 
 .alice-carousel__next-btn {
-    /* display: flex; */
-
     margin: 0 auto;
     height: 30px;
     color: blue;
-    background-color: rgba(255, 255, 255, 0.45);
-    padding:20px 10px;
+    background-color: rgba(255, 255, 255, 0.65);
+    padding:0 10px 30px 10px;
     border-radius: 0 0 20px 0;
-    /* border: 1px solid black; */
-    /* width: 40px; */
 }
 
 .alice-carousel__play-btn {
-    /* Add your styles here */
     color:yellow;
   }
