--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -69,6 +69,18 @@ label {
     flex-direction: column;
 }
 
+select {
+    box-shadow: 2px 2px 2px grey;
+    border: 1px solid grey;
+    outline: none
+}
+
+input {
+    box-shadow: 2px 2px 2px grey;
+    border: 1px solid grey;
+    outline: none
+}
+
 .alice-carousel__next-btn-item.__inactive {
 color: pink;
 }
