--- a/react-app/src/components/EditItemForm/EditItemForm.css
+++ b/react-app/src/components/EditItemForm/EditItemForm.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 30px;
-    padding: 5px 100px 40px 100px;
+    padding: 0px 200px 20px 200px;
     background-color: white;
     transition: left 1s;
 }
@@ -21,8 +21,12 @@
     flex-direction: column;
 }
 
+.edit-item-inputs > label > input {
+    width: 190px;
+}
+
 .edit-img-tag {
-    width: 300px;
+    width: 180px;
     align-self: center;
 }
 
