--- a/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
+++ b/react-app/src/components/ItemsPageHeader/ItemsPageHeader.css
@@ -26,8 +26,7 @@
 }
 
 .text-container {
-    /* min-width: 100px;
-    max-width: 200px; */
+    min-width: 220px;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -62,7 +61,7 @@
 }
 
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1600px) {
     .items-header {
         max-height: 200px;
         max-width: 600px;
@@ -92,8 +91,8 @@
         height: 100%;
     }
     .text-container {
-        min-width: 110px;
-        padding: 0 10px 0 70px;
+        min-width: 150px;
+        margin-left: 30px;
     }
 
 }
