--- a/react-app/src/components/Landing/Landing.css
+++ b/react-app/src/components/Landing/Landing.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 60px;
+    /* padding: 0 60px; */
     width: 100%;
     height: 100vh;
     /* background-image: url("https://supercleats-pics.s3.amazonaws.com/ezgif.com-gif-maker+(2).gif"); */
@@ -15,11 +15,15 @@
 .splash-text {
     color: white;
     font-size: 32px;
+    margin-left: 100px;
+    margin-top: 100px;
+    width: 400px;
 }
 
 .splash-teams{
     display: flex;
     width: 30%;
+    margin-left: 100px;
     /* overflow-x: scroll; */
 }
 
@@ -48,3 +52,15 @@
 /* .landing-image {
  width: 160%;
 } */
+
+@media screen and (max-width: 800px) {
+    .splash-text {
+        width: 300px;
+        margin: 0 auto;
+    }
+    .splash-teams{
+        width: 300px;
+        margin: 0 auto;
+        /* overflow-x: scroll; */
+    }
+}
