--- a/react-app/src/components/UsersItems.js/carousel-style.css
+++ b/react-app/src/components/UsersItems.js/carousel-style.css
@@ -31,3 +31,9 @@
 .alice-carousel__play-btn {
     color:yellow;
   }
+
+  @media screen and (max-width: 700px) {
+    .alice-carousel__dots {
+        display: none;
+    }
+}
