--- a/react-app/src/components/Filter/Filter.css
+++ b/react-app/src/components/Filter/Filter.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     padding: 10px;
     /* min-width: 300px; */
-    margin: 10px 70px;
+    margin: 10px 0px;
+    /* border: 1px solid black; */
+    width: 300px;
 }
 
 .filter-container > div {
@@ -19,22 +21,24 @@
 
 .type-filter {
     display: flex;
+    /* flex-direction: column; */
     /* justify-content: center; */
     font-weight: bold;
-    gap: 5px;
+    /* gap: 5px; */
     font-size: 14px;
     width: 100%;
-    /* border: 1px solid black; */
-    margin-right: 40px;
+    margin: 0 auto;
 }
 
-.type-filter > li {
+.filter-button {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100px;
-    padding: 2px 2px;
+    width: 80px;
+    min-width: 60px;
+    height: 30px;
+    padding: 10px 10px;
     border-radius: 20px;
     background-color: rgb(226, 226, 226);
 }
@@ -56,21 +60,32 @@
 
 .filter-middle {
     display: flex;
-    /* justify-content: center; */
-    gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    /* gap: 5px; */
+    margin: 0 auto;
 }
 
 .filter-middle > div {
+    display: flex;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* gap: 5px; */
+    align-self: center;
+}
+
+/* .filter-middle > div {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     width: 100px;
+    min-width: 60px;
     font-weight: bold;
     padding: 10px 0;
     border-radius: 20px;
     background-color: rgb(225, 225, 225);
-}
+} */
 
 .filter-bottom {
     display: flex;
