--- a/react-app/src/components/SlideOutMenu/SlideOutMenu.css
+++ b/react-app/src/components/SlideOutMenu/SlideOutMenu.css
@@ -1,14 +1,15 @@
 .slide-out-menu {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     top: 60px;
     left: -1px;
     padding-top: 5px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     padding-left:35px;
     width: 300px;
-    height: 100%;
+    height: 90%;
     transition: left 1s;
     text-decoration: none;
     list-style: none;
@@ -25,8 +26,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    margin-top: 100pz;
+    /* height: 100%; */
+    /* margin-top: 10px; */
+  }
+
+  .sidebar-top > div {
+    height: 50px;
   }
 
   .hidden-menu {
@@ -44,10 +49,27 @@
     padding: 18px 26px;
   }
 
+  .sidebar-signup {
+    border: none;
+    width: 100%;
+    height: 50px;
+  }
+
+  .sidebar-signup:hover {
+    background-color: rgba(0, 0, 0, 0.815);
+  }
+
   .sidebar-modal {
     border: none;
     width: 100%;
-    height: 100%;
+    height: 50px;
+    background-color: rgb(243, 243, 243);
+  }
+
+  .sidebar-modal {
+    border: none;
+    width: 100%;
+    height: 50px;
     background-color: rgb(243, 243, 243);
   }
 
@@ -76,8 +98,11 @@
 
   .a-wrapper {
     display: flex;
-    width: 100%;
     justify-content: center;
+    align-items: center;
+    gap: 4px;
+    width: 100%;
+    height: 50px;
     text-decoration: none;
     color: black;
   }
@@ -104,19 +129,19 @@
     justify-content: center;
   }
 
-  .slide-out-menu > * {
+  /* .slide-out-menu > * {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-  }
-
+  } */
+/*
   .slide-out-menu > div > * {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-  }
+  } */
 
   .signout-clear {
     display: flex;
@@ -124,7 +149,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
   }
 
   @media screen and (max-width: 500px) {
