--- a/react-app/src/components/DeleteModal/DeleteModal.css
+++ b/react-app/src/components/DeleteModal/DeleteModal.css
@@ -31,3 +31,13 @@
     font-size: 78px;
     font-weight: bold;
 }
+
+.explosion {
+    /* background-image: url('./giphy.gif'); */
+    width: 94px;
+    padding: 0 86px;
+}
+
+.hidden {
+    display: none;
+}
