--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 100px 0px 100px;
+    padding: 5px 100px 0px 100px;
     border-radius: 20px;
 }
 
