add bold on price filter

--- a/react-app/src/components/Filter/Filter.css
+++ b/react-app/src/components/Filter/Filter.css
@@ -73,6 +73,7 @@
     /* justify-content: center; */
     /* gap: 5px; */
     align-self: center;
+    font-weight: bold;
 }
 
 /* .filter-middle > div {
