--- a/react-app/src/components/Landing/Landing.css
+++ b/react-app/src/components/Landing/Landing.css
@@ -6,7 +6,8 @@
     width: 100%;
     height: 100vh;
     /* background-image: url("https://supercleats-pics.s3.amazonaws.com/ezgif.com-gif-maker+(2).gif"); */
-    background-image: url("https://supercleats-pics.s3.amazonaws.com/splash1.jpg");
+    /* background-image: url("https://supercleats-pics.s3.amazonaws.com/splash1.jpg"); */
+    /* background-image: url("https://supercleats-pics.s3.amazonaws.com/wembley.jpg"); */
     /* background-image: url("https://supercleats-pics.s3.amazonaws.com/splash6.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
