--- a/react-app/src/components/Tickets/Tickets.css
+++ b/react-app/src/components/Tickets/Tickets.css
@@ -1,12 +1,24 @@
 .tickets-container {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
     margin-top: 100px;
-    font-size: 20px;
+    font-size: 16px;
+    /* padding-left: 200px; */
+    border: 1px solid red;
+}
+
+.ticket-carousel {
+    /* display: flex; */
+    margin: 0 auto;
+    width: 40%;
 }
 
 .ticket-card {
     padding: 10px;
     border: 1px solid black;
-    width: 300px;
+    width: 140px;
+    margin: 0 auto;
 }
 
 /* .stadium {
