--- a/react-app/src/components/Tickets/Tickets.css
+++ b/react-app/src/components/Tickets/Tickets.css
@@ -1,26 +1,44 @@
 .tickets-container {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
-    margin-top: 100px;
+    margin-top: 70px;
     font-size: 16px;
-    /* padding-left: 200px; */
-    border: 1px solid red;
 }
 
 .ticket-carousel {
-    /* display: flex; */
     margin: 0 auto;
     width: 40%;
 }
 
 .ticket-card {
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 1px solid black;
-    width: 140px;
+    border-radius: 24px;
+    width: 280px;
+    height: 220px;
     margin: 0 auto;
+    background-color: white;
+
 }
 
-/* .stadium {
-    font-size: 20px;
-} */
+.ticket-img {
+    width: 100%;
+    height: 140px;
+    border-radius: 24px 24px 0 0;
+}
+
+.map-container {
+    padding: 0;
+    margin: 0;
+}
+
+@media screen and (max-width: 800px) {
+    .tickets-container {
+        flex-direction: column;
+    }
+    .ticket-carousel {
+        width: 100%;
+    }
+}
