--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -38,7 +38,38 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 300px;
+  width: 400px;
+}
+
+.pill-shape {
+  display: flex;
+  border-radius: 50px;
+  /* border: 1px solid red; */
+  background-color: aliceblue;
+  overflow: hidden;
+}
+
+
+
+.products {
+  padding: 10px;
+  background-color: whitesmoke;
+  transition: background-color .5s ease;
+  border: none;
+
+}
+
+.tickets {
+  padding: 10px;
+  background-color: whitesmoke;
+  transition: background-color .5s ease;
+  border: none;
+}
+
+.filled {
+  border: none;
+  background-color: rgba(226, 226, 226, 0.842);
+  transition: background-color .5s ease;
 }
 
 .login-button-nav {
