--- a/react-app/src/components/Tickets/Tickets.css
+++ b/react-app/src/components/Tickets/Tickets.css
@@ -1,13 +1,17 @@
 .tickets-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 70px;
+    /* align-items: center; */
+    margin-top: 100px;
     font-size: 16px;
+    /* padding-left: 200px; */
+    border: 1px solid red;
 }
 
 .ticket-carousel {
+    /* display: flex; */
     margin: 0 auto;
-    width: 42%;
+    width: 40%;
 }
 
 .ticket-card {
@@ -15,23 +19,7 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
-    border-radius: 24px;
-    width: 290px;
-    height: 260px;
-    margin: 0 auto;
-    background-color: white;
-
-}
-
-.ticket-img {
-    width: 100%;
-    height: 140px;
-    border-radius: 24px 24px 0 0;
-}
-
-.map-container {
-    padding: 0;
-    margin: 0;
+    width: 300px;
 }
 
 @media screen and (max-width: 800px) {
