add favorite form added with user favorites section

--- a/react-app/src/components/UserFavorites/UserFavorites.css
+++ b/react-app/src/components/UserFavorites/UserFavorites.css
@@ -1,5 +1,7 @@
 .favorite-card {
-    background-color: white;
+    background-color: whitesmoke;
     width: 400px;
     height: 140px;
+    border-radius: 20px;
+    padding: 20px;
 }
