--- a/react-app/src/components/UserFavorites/UserFavorites.css
+++ b/react-app/src/components/UserFavorites/UserFavorites.css
@@ -1,7 +1,20 @@
 .favorite-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: whitesmoke;
     width: 400px;
-    height: 140px;
+    height: 200px;
     border-radius: 20px;
-    padding: 20px;
+    padding: 5px;
+    margin: 0 10px;
+}
+
+.story {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 400px;
+    overflow-y: scroll;
+    margin: 0 auto;
 }
