--- a/react-app/src/components/UsersItems.js/UsersItems.css
+++ b/react-app/src/components/UsersItems.js/UsersItems.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin-top: 100px;
+    margin-top: 220px;
     height: 88vh;
     background-size: 100%;
 }
@@ -47,6 +47,10 @@
     justify-content: center;
     align-self: center;
     /* margin: 0 auto; */
+}
+
+.favorites-container > h2 {
+    margin-left: 100px;
 }
 
 /* @media screen and (max-width: 1270px) {
