--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -73,12 +73,14 @@ select {
     box-shadow: 2px 2px 2px grey;
     border: 1px solid grey;
     outline: none;
+    height: 24px;
 }
 
 input {
     box-shadow: 2px 2px 2px grey;
     border: 1px solid grey;
     outline: none;
+    height: 24px;
 }
 
 textarea {
@@ -86,6 +88,19 @@ textarea {
     border: 1px solid grey;
     outline: none;
     height: 80px;
+}
+
+.error-text {
+    font-size: 11px;
+    color: red;
+}
+
+.label-error {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 22px;
+    width: 300px;
 }
 
 .alice-carousel__next-btn-item.__inactive {
