style ticket search results

--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -26,3 +26,8 @@
     background-color: rgb(250, 250, 250);
     width: 500px;
 }
+
+.result-card-ticket {
+    background-color: rgb(250, 250, 250);
+    width: 600px;
+}
