--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -1,3 +1,10 @@
+.searchbar {
+    height: 18px;
+    padding: 6px;
+    border-radius: 20px;
+    width: 380px;
+}
+
 .search-results {
     display: flex;
     flex-direction: column;
@@ -18,7 +25,7 @@
 }
 
 .results-visible {
-    top: 40px;
+    top: 44px;
     left: 0;
 }
 
